<resources>
    <string name="app_name">Crypto</string>

    <string name="period_1h">12H</string>
    <string name="period_1day">1D</string>
    <string name="period_1week">1W</string>
    <string name="period_1month">1M</string>
    <string name="period_3month">3M</string>
    <string name="period_1year">1Y</string>
    <string name="period_all">ALL</string>

    <string name="up_price">ALL</string>
    <string name="down_price">ALL</string>
</resources>