<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="14dp"
    android:layout_marginEnd="14dp">

    <TextView
        android:id="@+id/txtChartPrice"
        style="@style/CoinBitText.Huge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$40.90"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtChartUpDown"
        style="@style/CoinBitText.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingEnd="4dp"
        android:text="▲"
        android:textColor="@color/tertiaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChartPrice" />

    <TextView
        android:id="@+id/txtChartChange1"
        style="@style/CoinBitText.BodyTertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingEnd="12dp"
        android:text="-$0.04"
        app:layout_constraintStart_toEndOf="@+id/txtChartUpDown"
        app:layout_constraintTop_toBottomOf="@+id/txtChartPrice" />

    <TextView
        android:id="@+id/txtChartChange2"
        style="@style/CoinBitText.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="+8.1%"
        android:textColor="@color/tertiaryTextColor"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtChartChange1"
        app:layout_constraintTop_toBottomOf="@+id/txtChartPrice" />

    <com.robinhood.spark.SparkView
        android:id="@+id/sparkViewMain"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChartChange1"
        app:spark_animateChanges="true"
        app:spark_lineColor="@color/colorPrimary"
        app:spark_scrubEnabled="true" />


    <TextView
        android:visibility="gone"
        android:id="@+id/txtChartError"
        style="@style/CoinBitText.Body1Alternate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Some error"
        app:layout_constraintBottom_toBottomOf="@+id/sparkViewMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/sparkViewMain"
        app:layout_constraintTop_toTopOf="@+id/sparkViewMain" />

    <RadioGroup
        android:id="@+id/radioGroupMain"
        android:weightSum="7"
        android:padding="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sparkViewMain">

        <RadioButton
            android:id="@+id/radio12h"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="true"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1h"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio1D"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1day"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio1W"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1week"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio1M"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1month"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio3M"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_3month"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio1Y"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_1year"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioAll"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/period_all"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textSize="14dp"
            android:textStyle="bold" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>